Fix object discovery #50
